--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 .index_body {
   display: flex;
-  flex-direction: column;
+  flex-direction: column;ㅇ
   align-items: center;
   justify-content: center;
   padding: 30px;
