--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+/** 자바스크립트 내의 요소들 정렬하기 ex) 검사가 완료되었습니다 텍스트**/
+
 .index_body {
   display: flex;
   flex-direction: column;
@@ -32,7 +34,6 @@
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
-
   outline: none;
 }
 
@@ -46,8 +47,7 @@
 .index_body .start_btn:visited {
   background-color: white;
 }
-
-.main_body .modal {
+.index_body .modal {
   display: none; /* Hidden by default 처음에 보이지 않음 */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top 위에 보여짐*/
@@ -60,6 +60,10 @@
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 .modal .modalcontent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
@@ -69,4 +73,16 @@
 .modal .text {
   width: 90;
   font-size: medium;
+}
+
+.modal .maskimg {
+  width: 150px;
+  height: 250px;
+}
+
+.javaScript .labelContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
