--- a/main.css
+++ b/main.css
@@ -76,9 +76,30 @@
 }
 
 .count{
-  font-size: 50px;
-  flex-direction: column;
+  font-family: 'Anton', sans-serif;
+  font-size: 30px;
+  
+  margin-left: 40px;
 }
+
+.count2{
+  font-family: 'Anton', sans-serif;
+  font-size: 30px;
+  margin-left: 80px;
+}
+
+.maskon{
+  width: 50px;
+  height: 50px;
+  margin-left: 20px;
+}
+
+.maskoff{
+  width: 50px;
+  height: 50px;
+  margin-left: 60px;
+}
+
 .index_title{
   font-family: 'Anton', sans-serif;
   font-size: 70px;
@@ -95,4 +116,5 @@
   align-items: center;
   justify-content: center;
 }
+
 
