--- a/main.css
+++ b/main.css
@@ -7,6 +7,8 @@
   justify-content: center;
   padding: 30px;
   margin: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
   letter-spacing: 2.5px;
   font-weight: 500;
 }
@@ -14,8 +16,6 @@
 .index_body .index_title {
   padding: 10px;
   margin: 30px;
-  font-family: "Anton", sans-serif;
-  font-size: 70px;
 }
 
 .index_body .start_btn {
@@ -47,20 +47,6 @@
 .index_body .start_btn:visited {
   background-color: white;
 }
-
-.index_body .webcam {
-  margin-bottom: 30px;
-}
-
-.index_body .label {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-family: "Anton", sans-serif; /*한글 지원 폰트로 변경하기*/
-  font-size: 30px;
-}
-
 .index_body .modal {
   display: none; /* Hidden by default 처음에 보이지 않음 */
   position: fixed; /* Stay in place */
@@ -68,7 +54,7 @@
   left: 0;
   top: 0;
   width: 100%; /* Full width */
-  height: 100%;
+  height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed 스크롤내려도 따라감*/
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
@@ -126,18 +112,9 @@
 
 .javaScript .labelContainer {
   display: flex;
-
-.count{
-  font-size: 50px;
   flex-direction: column;
-}
-.index_title{
-  font-family: 'Anton', sans-serif;
-  font-size: 70px;
-}
-.modal .maskimg {
-  width: 210px;
-  height: 350px;
+  align-items: center;
+  justify-content: center;
 }
 
 
