--- a/main.css
+++ b/main.css
@@ -10,7 +10,8 @@
 }
 
 .index_body .index_title {
-  margin-bottom: 30px;
+  padding: 10px;
+  margin: 30px;
   font-family: "Anton", sans-serif;
   font-size: 70px;
 }
@@ -18,7 +19,7 @@
 .index_body .start_btn {
   width: 140px;
   height: 45px;
-  margin: 20px;
+  margin: 30px;
   font-size: 11px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
@@ -44,6 +45,39 @@
   background-color: white;
 }
 
+.index_body .stop_btn {
+  width: 140px;
+  height: 45px;
+  margin: 30px;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.index_body .stop_btn:hover {
+  background-color: #1f9be2c2;
+  box-shadow: 0px 15px 20px rgba(39, 130, 233, 0.5);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.index_body .stop_btn:visited {
+  background-color: white;
+}
+
+.index_body .webcam {
+  margin-bottom: 30px;
+}
+
 .index_body .label {
   display: flex;
   flex-direction: column;
@@ -65,7 +99,6 @@
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
-
 .modal .modalcontent {
   display: flex;
   flex-direction: column;
@@ -89,31 +122,42 @@
   justify-content: center;
 }
 
-.count {
+#count_1 {
   font-family: "Anton", sans-serif;
   font-size: 30px;
   margin: 30px;
 }
 
-.count2 {
+#count_2 {
   font-family: "Anton", sans-serif;
   font-size: 30px;
   margin: 30px;
 }
 
-.maskon {
+#maskOn {
   width: 50px;
   height: 50px;
-  margin: 15px;
+  margin: 30px;
 }
 
-.maskoff {
+#maskOff {
   width: 50px;
   height: 50px;
-  margin: 15px;
+  margin: 30px;
 }
 
-.modal .maskimg {
-  width: 210px;
-  height: 350px;
+.modal #maskimg {
+  width: 100px;
+  height: 100px;
+}
+.cntMask {
+  /* 판단을 시작할 때 결과창을 띄우기 위해서 counting 클래스 인자들을 모두 none 처리 해 둔다 */
+  display: none;
+}
+#stop_btn {
+  /* 처음 재생 시에는 stop 버튼이 안보이도록 해 놓음 */
+  display: none;
+}
+.modalcontent .alerting {
+  float: left;
 }
