--- a/Mask-Keeper-master/main.css
+++ b/Mask-Keeper-master/main.css
@@ -103,7 +103,7 @@
 }
 .modal .modalcontent {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   background-color: #fefefe;
@@ -112,6 +112,7 @@
   border: 1px solid #888;
   width: 50%; /* Could be more or less, depending on screen size */
 }
+
 .modal .text {
   width: 90;
   font-size: medium;
@@ -163,5 +164,24 @@
   /* 처음 재생 시에는 stop 버튼이 안보이도록 해 놓음 */
   display:none;
 }
+.index_body .result_counting{
+  display: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.index_body #mute{
+  width: 20px;
+  height: 20px;
+  border: 2px purple;
+}
+.index_body #mute :hover{
+  background-color: #1f9be2c2;
+  color: #fff;
+  transform: translateY(-7px);
+}
 
-
+.index_body #mute {
+  background-color: gray;
+}
