--- a/Mask-Keeper-master/main.css
+++ b/Mask-Keeper-master/main.css
@@ -112,8 +112,19 @@
   border: 1px solid #888;
   width: 50%; /* Could be more or less, depending on screen size */
 }
+.modal #modalText {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
 
-.modal .text {
+.modal #text {
   width: 90;
   font-size: medium;
 }
