--- a/main.css
+++ b/main.css
@@ -7,24 +7,28 @@
   margin: 30px;
   letter-spacing: 2.5px;
   font-weight: 500;
+  
 }
-
 .index_body .index_title {
   padding: 10px;
   margin: 30px;
   font-family: "Anton", sans-serif;
   font-size: 70px;
+  color: #1D3689;
+
+  /* animation-play-state: paused; */
 }
 
-.index_body .start_btn {
+
+.index_body .btn {
   width: 140px;
   height: 45px;
   margin: 30px;
   font-size: 11px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
+  font-weight: bolder;
+  color: white;
   background-color: #fff;
   border: none;
   border-radius: 45px;
@@ -32,48 +36,27 @@
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+  background-color: #1D3689;
 }
 
-.index_body .start_btn:hover {
+.index_body .btn:hover {
   background-color: #1f9be2c2;
   box-shadow: 0px 15px 20px rgba(39, 130, 233, 0.5);
   color: #fff;
   transform: translateY(-7px);
+  transition-property: font-size;
+  transition-duration: 1s;
 }
 
-.index_body .start_btn:visited {
+.index_body .btn:visited {
   background-color: white;
 }
-
-.index_body .stop_btn {
-  width: 140px;
-  height: 45px;
-  margin: 30px;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+.index_body #pause_btn{
+  display: none;
 }
-
-.index_body .stop_btn:hover {
-  background-color: #1f9be2c2;
-  box-shadow: 0px 15px 20px rgba(39, 130, 233, 0.5);
-  color: #fff;
-  transform: translateY(-7px);
+.index_body #stop_btn{
+  display: none;
 }
-
-.index_body .stop_btn:visited {
-  background-color: white;
-}
-
 .index_body .webcam {
   margin-bottom: 30px;
 }
@@ -83,7 +66,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Do Hyeon", sans-serif;
+  font-family: "Anton", sans-serif; /*한글 지원 폰트로 변경하기*/
   font-size: 30px;
 }
 
@@ -105,17 +88,41 @@
   align-items: center;
   justify-content: center;
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto; 
+  /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
   width: 50%; /* Could be more or less, depending on screen size */
 }
-.modal .text {
+.modalcontent .firstcontent{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.modalcontent .firstcontent #text{
+  font-weight: bolder;
+}
+.modal #modalText {
+  font-weight: bold;
+  font-size: large;
+}
+.modal #warningCNT{
+  color: red;
+}
+
+.modal #text {
   width: 90;
   font-size: medium;
 }
 
 .index_body .counting {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.index_body #buttons{
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -138,26 +145,47 @@
   width: 50px;
   height: 50px;
   margin: 30px;
+  border-radius: 50px;
 }
 
 #maskOff {
   width: 50px;
   height: 50px;
   margin: 30px;
+  border-radius: 50px;
 }
 
 .modal #maskimg {
+  /* width: 210px; */
+  /* height: 350px; */
   width: 100px;
   height: 100px;
+  
 }
-.cntMask {
+.cntMask{ 
   /* 판단을 시작할 때 결과창을 띄우기 위해서 counting 클래스 인자들을 모두 none 처리 해 둔다 */
   display: none;
 }
-#stop_btn {
+#stop_btn{
   /* 처음 재생 시에는 stop 버튼이 안보이도록 해 놓음 */
-  display: none;
+  display:none;
 }
-.modalcontent .alerting {
-  float: left;
+.index_body .result_counting{
+  display: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.index_body #mute{
+  width: 25px;
+  height: 25px;
+  float: right;
+  border-radius: 50px ;
+  border: 1px solid #1D3689;
+}
+
+
+.index_body #mute :visited {
+  background-color: gray;
 }
