--- a/Mask-Keeper-master/main.css
+++ b/Mask-Keeper-master/main.css
@@ -20,6 +20,9 @@ html{
 
   /* animation-play-state: paused; */
 }
+.index_body{
+  background-color: white;
+}
 
 .index_body .btn {
   width: 140px;
@@ -29,8 +32,8 @@ html{
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: bolder;
-  color: white;
-  background-color: #1D3689; 
+  color:#1D3689;
+  background-color:white; 
   border: none;
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -60,14 +63,19 @@ html{
   background-color: #1D3689; 
   border: none;
   border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
 }
 
+.dropdownBT:hover{
+  background-color: rgb(161, 160, 160);
+  color: #fff;
+}
+.dropdownBT{
+  font-weight: bold;
+}
 .index_body .btn:visited {
-  background-color: white;
+  background-color: #1D3689;
 }
 .index_body #pause_btn{
   display: none;
@@ -252,7 +260,7 @@ iframe{
 .dropbtn {
   background-color: #1D3689;
   color: white;
-  padding: 16px;
+  padding: 10px;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -264,7 +272,7 @@ iframe{
 
 .dropdown {
   position: relative;
-  margin-right: 300px;
+  margin-right: 100%;
   display: inline-block;
 }
 
